maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:-23: error: Unmatched closing brace '}' ignored here
	}
        ^ShortestPathMaze:-22: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^ShortestPathMaze:-18: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^ShortestPathMaze:5: error: illegal start of statement (no modifiers allowed here)
override def run() {
^ShortestPathMaze:34: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^ShortestPathMaze:35: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^ShortestPathMaze:36: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^ShortestPathMaze:37: error: Unmatched closing brace '}' ignored here
}
^